--- a/app/src/main/res/layout/activity_animals_add.xml
+++ b/app/src/main/res/layout/activity_animals_add.xml
@@ -49,6 +49,7 @@
             android:id="@+id/animals_add_Type_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#000000"
             android:layout_marginStart="50dp"
             android:layout_marginTop="24dp"
             android:text="@string/str_animals_add_Type"
@@ -60,6 +61,7 @@
             android:id="@+id/animals_add_Type_pt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#000000"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="24dp"
             android:ems="10"
@@ -74,6 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:layout_marginTop="32dp"
+            android:textColor="#000000"
             android:text="@string/str_animals_add_Number"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -86,6 +89,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="24dp"
             android:ems="10"
+            android:textColor="#000000"
             android:hint="@string/str_animals_add_Number"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
@@ -96,6 +100,7 @@
             android:layout_width="409dp"
             android:layout_height="320dp"
             android:layout_marginTop="32dp"
+            android:dividerHeight="-1dp"
             android:background="@drawable/listview_backgroud"
             android:nestedScrollingEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
@@ -108,6 +113,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:layout_marginTop="32dp"
+            android:textColor="#000000"
             android:text="@string/str_animals_add_Name"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -120,6 +126,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="24dp"
             android:ems="10"
+            android:textColor="#000000"
             android:hint="@string/str_animals_add_Name"
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
