--- a/app/src/main/res/layout/activity_crops_add.xml
+++ b/app/src/main/res/layout/activity_crops_add.xml
@@ -53,6 +53,7 @@
             android:layout_marginTop="24dp"
             android:text="@string/str_animals_add_Type"
             android:textSize="16sp"
+            android:textColor="#000000"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar_crops_add" />
@@ -63,6 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="24dp"
+            android:textColor="#000000"
             android:ems="10"
             android:hint="@string/str_animals_add_Type"
             android:inputType="textPersonName"
@@ -75,7 +77,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:layout_marginTop="32dp"
-            android:text="@string/str_animals_add_Number"
+            android:text="@string/str_crop_acres"
+            android:textColor="#000000"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -88,8 +91,9 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="24dp"
             android:ems="10"
-            android:hint="@string/str_animals_add_Number"
+            android:hint="@string/str_crop_acres"
             android:inputType="textPersonName"
+            android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/crops_add_Type_pt" />
 
@@ -97,6 +101,7 @@
             android:id="@+id/crops_add_ListView"
             android:layout_width="409dp"
             android:layout_height="320dp"
+            android:dividerHeight="-1dp"
             android:layout_marginTop="32dp"
             android:background="@drawable/listview_backgroud"
             android:nestedScrollingEnabled="true"
@@ -112,6 +117,7 @@
             android:layout_marginTop="32dp"
             android:text="@string/str_animals_add_Name"
             android:textSize="16sp"
+            android:textColor="#000000"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/crops_add_Number_tv" />
@@ -122,6 +128,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="24dp"
+            android:textColor="#000000"
             android:ems="10"
             android:hint="@string/str_animals_add_Name"
             android:inputType="textPersonName"
