--- a/app/src/main/res/layout/activity_calendar_event_details.xml
+++ b/app/src/main/res/layout/activity_calendar_event_details.xml
@@ -63,6 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="64dp"
+            android:textStyle="bold"
             android:textColor="#000000"
             android:layout_marginEnd="32dp"
             android:hint="@string/str_calendar_event_details_SelectField"
@@ -74,6 +75,7 @@
                 android:id="@+id/calendar_event_details_auto_complete_txt"
                 android:layout_width="match_parent"
                 android:textColor="#000000"
+                android:textStyle="bold"
                 android:layout_height="wrap_content"
                 android:inputType="none" />
         </com.google.android.material.textfield.TextInputLayout>
